tests/parse_errors/undefvar02.bkl
<?xml version="1.0" ?>
<makefile>
    <lib id="test">
        <!-- pass undefined variable as tag's value argument: -->
        <libname>foo-$(BAR)</libname>
    </lib>
</makefile>
